@@ -4,6 +4,4 @@
 	actually use that return value to display an error if there was one.
 + Redo Preferences dialog.
 + Clean up the code and indent it properly.
-+ Move all pop-up and menu functions from main.c to menus.c.
-+ Use the shipped icon in the display.
 + history structure has to be changed in: main.c, manage.c, history.c
